* check for spelling before committing

--- a/trunk/README
+++ b/trunk/README
@@ -18,8 +18,8 @@ ATTENTION: this doesn't work completely yet. PD is at a really early state of de
 ==========================
 
 All applications are licensed under the GNU General Public License 2 or any later version. This does basically mean that you can freely re-distribute this source-code and its resulting binaries as long as comply with that licence.
-You can (you're encouraged to do so in fact) include the software on CDs provide with your magasine as long as include its source-code on the disk or send it on a CD to a reader on request (you can charge for the postage).
-If you create any derivative works of this software, you are aspected to release them under a GPL-compatible licence and encouraged to re-contribute your changes.
+You can (you're encouraged to do so in fact) include the software on CDs provide with your magazine as long as include its source-code on the disk or send it on a CD to a reader on request (you can charge for the postage).
+If you create any derivative works of this software, you are expected to release them under a GPL-compatible licence and encouraged to re-contribute your changes.
 
 
 ==========================
