--- a/trunk/README
+++ b/trunk/README
@@ -2,7 +2,7 @@
  Small Photo Applications
 ==========================
 
-Small Photo Applications is a small project which is going to produce multiple (guess what?) little applications which deal with the work on picture using Mac OS X. They are entirely written in Objective C using Xcode (currently 2.1 or later) and provided as Universal Binaries to the users.
+Small Photo Applications is a small project which is going to produce multiple little applications which deal with the work on pictures using Mac OS X. They are entirely written in Objective C using Xcode and provided as Universal Binaries.
 
 
 ==========================
@@ -10,8 +10,8 @@ Small Photo Applications is a small project which is going to produce multiple (
 ==========================
 
 PD is the first part of this collection. You can drop your files on its icon or on its window: it will ask you for the new compression method / level and saves the files to your desired location.
-ATTENTION: this doesn't work completely yet. PD is at a really early state of development, but gets better by every revision and is going to be finished by Dec 23rd.
-Known issues are mentioned in the about-box. If you encounter other problems, open a bug on the project-page or mail me directly please. Thanks for you help.
+
+There are no known issues at the moment. If you encounter any problem, open a bug on the project-page or mail me directly please. Thanks for your help.
 
 
 ==========================
@@ -25,16 +25,16 @@ Just drag and drop the application to your Applications folder.
         Licence
 ==========================
 
-All applications are licensed under the GNU General Public License 2 or any later version. This does basically mean that you can freely re-distribute, modify or export this source-code and its resulting binaries as long as comply with that licence.
-You can (you're encouraged to do so in fact) include the software on CDs provide with your magazine as long as include its source-code on the disk or send it on a CD to a reader on request (you can charge for the postage).
-If you create any derivative works of this software, you are expected to release them under a GPL-compatible licence and encouraged to re-contribute your changes.
+All applications are licensed under the GNU General Public License 2 or any later version. This does basically mean that you may freely re-distribute, modify or export this source-code and its resulting binaries as long as comply with that licence.
+You can (you're encouraged to do so in fact) include the software on CDs provide with your magazine as long as include its source-code on the disk, put a link to the source on your disk or send it on a CD to a reader on request (you may charge for the shipping fees).
+If you create any derivative works of this software, you are required to release them under a GPL-compatible licence and encouraged to re-contribute your changes.
 
 
 ==========================
       Miscellaneous
 ==========================
 
-All applications created by this project will be shipped with enabled localisation support and include finished localisations to American English, British English and German. If you want to add your own translation or just would like to drop me a note, feel free to mail fkuehne{at}users{dot}berlios{dot}de.
+All applications created by this project will be shipped with enabled localisation support and include finished localisations to American English, British English and German. If you want to add your own translation or just would like to drop me a note, feel free to mail fkuehne{at}gmail{dot}com.
 This is obviously a free software project, but it is currently run by me, myself and I only. If you would like to join it or just would like to provide patches, you're gladly welcome. Please use the above mail-address to contact me.
 
 
@@ -42,7 +42,7 @@ This is obviously a free software project, but it is currently run by me, myself
        Compilation
 ==========================
 
-To compile any sub-projects you need Xcode 2.1 or higher. A basic Makefile is provided to run the compilation through a command-line, but I highly recommend you to use Xcode's GUI to do real editing. Note that this Makefile requires Xcode as well. No configuration options are necessary to compile these sources. So-called Universal Binaries are created by default.
+To compile any sub-projects you need Xcode 2.2 or later. A basic Makefile is provided to run the compilation through the command-line, but I highly recommend you to use Xcode's GUI to do real editing. Note that this Makefile requires Xcode as well. No configuration options are necessary to compile these sources. So-called Universal Binaries are created by default.
 To simplify your and my personal work, this script enables you to create source-tarballs and binary-packages for distribution. Note that the list of files is hard-coded and needs manual editing in case you have added a file to one of the projects.
 
 $Id$
